sandbox/output
Hiker.java:16: error: unreachable statement
        return 0;
        ^
1 error
